# selene-backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  Jenkinsfile  README.md
api/account/: Pipfile  pyproject.toml  uwsgi.ini
api/account/account_api/: api.py
api/account/account_api/endpoints/: __init__.py  account_device.py  account_preferences.py  change_email_address.py  change_password.py  city.py  country.py  defaults.py  device.py  device_count.py  geography.py  membership.py  pairing_code.py  password_change.py  preferences.py  region.py  skill_oauth.py  skill_settings.py  skills.py  software_update.py  ssh_key_validator.py  timezone.py  verify_email_address.py  voice_endpoint.py  wake_word_endpoint.py
api/account/tests/features/: add_account.feature  add_device.feature  agreements.feature  authentication.feature  environment.py  new_account.feature  pantacor_update.feature  profile.feature  remove_account.feature  software_update.feature  update_membership.feature
api/market/: Dockerfile  Pipfile  pyproject.toml  uwsgi.ini
api/market/market_api/: api.py
api/market/market_api/endpoints/: __init__.py  available_skills.py  skill_detail.py  skill_install.py  skill_install_status.py  user.py
api/precise/: Pipfile  pyproject.toml  uwsgi.ini
api/precise/precise_api/: api.py
api/precise/precise_api/endpoints/: __init__.py  audio_file.py  designation.py  tag.py
api/public/: Pipfile  api.py  encoder.py  pyproject.toml  uwsgi.ini
api/public/endpoints/: device.py  device_code.py  device_setting.py  device_skill.py  device_skills.py  device_subscription.py  google_stt.py  wolfram_alpha.py
api/public/public_api/: api.py
api/public/public_api/endpoints/: account_device.py  audio_transcription.py  device.py  device_activate.py  device_code.py  device_email.py  device_location.py  device_metrics.py  device_oauth.py  device_oauth_token.py  device_pantacor.py  device_refresh_token.py  device_setting.py  device_skill.py  device_skill_manifest.py  device_skill_settings.py  device_skills.py  device_subscription.py  geolocation.py  google_stt.py  oauth_callback.py  open_weather_map.py  premium_voice.py  stripe_webhook.py  wake_word_file.py  wolfram_alpha.py  wolfram_alpha_simple.py  wolfram_alpha_spoken.py  wolfram_alpha_v2.py
api/public/tests/features/: device_email.feature  device_location.feature  device_metrics.feature  device_pairing.feature  device_refresh_token.feature  device_skill_manifest.feature  device_skill_settings.feature  device_skills.feature  device_subscription.feature  environment.py  get_device.feature  get_device_settings.feature  get_utterance.feature  transcribe_audio.feature  wake_word_file_upload.feature  wolfram_alpha.feature
api/sso/: Pipfile  pyproject.toml  uwsgi.ini
api/sso/sso_api/: api.py
api/sso/sso_api/endpoints/: __init__.py  authenticate_antisocial.py  authenticate_internal.py  authenticate_social.py  facebook.py  github.py  (+9 more)
batch/: Pipfile  pyproject.toml
batch/base/: __init__.py  base.py
batch/job_scheduler/: __init__.py  jobs.py
batch/script/: daily_report.py  delete_wake_word_files.py  designate_wake_word_files.py  load_skill_display_data.py  move_wake_word_files.py  parse_core_metrics.py  partition_api_metrics.py  test_scheduler.py  update_device_last_contact.py
db/: Pipfile  pyproject.toml
db/mycroft/: create_db.sql  create_extensions.sql  create_mycroft_db.sql  create_roles.sql  create_template_db.sql  drop_extensions.sql  drop_mycroft_db.sql  drop_roles.sql  drop_template_db.sql
db/mycroft/account_schema/: create_schema.sql  grants.sql
db/mycroft/device_schema/: create_schema.sql  get_device_defaults_for_city.sql  get_device_geographies_for_city.sql  grants.sql
db/mycroft/geography_schema/: create_schema.sql  delete_duplicate_cities.sql  get_duplicated_cities.sql
db/mycroft/metric_schema/: create_schema.sql
db/mycroft/metrics_schema/: create_schema.sql  grants.sql
db/mycroft/skill_schema/: create_schema.sql  grants.sql
db/mycroft/tagging_schema/: grants.sql
db/mycroft/types/: agreement_enum.sql  cateogory_enum.sql  core_version_enum.sql  date_format_enum.sql  measurement_system_enum.sql  membership_type_enum.sql  payment_method_enum.sql  tagger_type_enum.sql  tagging_file_origin_enum.sql  tagging_file_status_enum.sql  time_format_enum.sql  tts_engine_enum.sql  wake_word_engine_enum.sql
db/mycroft/versions/: 2020.9.1.sql
db/mycroft/wake_word_schema/: grants.sql
db/scripts/: __init__.py  bootstrap_mycroft_db.py  neo4j-postgres.py  queries.cypher  remove_duplicate_cities.py
shared/: Dockerfile  MANIFEST.in  Pipfile  pyproject.toml  setup.py
shared/device/: device.py
shared/selene/account/: __init__.py  account.py
shared/selene/api/: __init__.py  account_endpoint.py  agreements_endpoint.py  base_config.py  base_endpoint.py  blueprint.py  etag.py  pantacor.py  public_endpoint.py  response.py  response_data_formatter.py
shared/selene/batch/: __init__.py  base.py
shared/selene/data/: repository_base.py
shared/selene/device/: __init__.py  device.py
shared/selene/setting/: __init__.py  setting.py
shared/selene/skill/: __init__.py  skill.py
shared/selene/testing/: __init__.py  account.py  account_activity.py  account_geography.py  account_preference.py  agreement.py  api.py  device.py  device_skill.py  membership.py  skill.py  tagging.py  test_db.py  text_to_speech.py  wake_word.py
shared/selene/util/: __init__.py  api.py  auth.py  cache.py  db.py  encoder.py  exceptions.py  github.py  log.py  not_modified.py  selene_cache.py
shared/selene_util/: __init__.py  api.py  auth.py  db.py  github.py
shared/setting/: setting.py
shared/setting/sql/: get_wake_word_by_device_id.sql
shared/skill/sql/: get_skill_setting_by_device_id.sql
(+871 files in other folders)
