[tool.poetry]
name = "account"
version = "0.1.0"
description = "API to support account.mycroft.ai"
authors = ["Chris Veilleux <veilleux.chris@gmail.com>"]
license = "GNU AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
# Version 1.0 of flask required because later versions do not allow lists to be passed as API repsonses.  The Google
# STT endpoint passes a list of transcriptions to the device.  Changing this to return a dictionary would break the
# API's V1 contract with Mycroft Core.
#
# To make flask 1.0 work, older versions of itsdangerous, jinja2, markupsafe and werkszeug are required.
flask = "<1.1"
itsdangerous = "<=2.0.1"
jinja2 = "<2.11.4"
markupsafe = "<=2.0.1"
schematics = "*"
stripe = "*"
selene = {path = "./../../shared",  develop = true}
uwsgi = "*"
werkzeug = "<=2.0.3"

[tool.poetry.dev-dependencies]
allure-behave = "*"
behave = "*"
pyhamcrest = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
