[tool.poetry]
name = "market"
version = "0.1.0"
description = "API for Mycroft Marketplace"
authors = ["Chris Veilleux <veilleux.chris@gmail.com>"]
license = "GNU AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
requests = "*"
pyjwt = "*"
uwsgi = "*"
markdown = "*"
selene = {path = "./../../shared", develop = true}

[tool.poetry.dev-dependencies]
behave = "*"
pyhamcrest = "*"
allure-behave = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
