[tool.poetry]
name = "precise"
version = "0.1.0"
description = "API for Precise wake word tagger"
authors = ["Chris Veilleux <veilleux.chris@gmail.com>"]
license = "GNU AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
selene = {path = "./../../shared", develop = true}
uwsgi = "*"

[tool.poetry.dev-dependencies]
behave = "*"
pyhamcrest = "*"
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
